--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "node-fetch": "^1.7.2"
   }
 }
